--- a/sequential/Makefile
+++ b/sequential/Makefile
@@ -1,2 +1,2 @@
 all: unit_test.cpp operation.cpp operation.h tensor.cpp tensor.h controller.cpp controller.h
-	g++ -Wall -std=c++11 -O3 unit_test.cpp -lm
+	g++ -Wall -std=c++11 -O3 unit_test.cpp operation.cpp tensor.cpp -lm
