--- a/sequential/Makefile
+++ b/sequential/Makefile
@@ -1,2 +1,2 @@
-all: unit_test.cpp operation.cpp operation.h tensor.cpp tensor.h controller.cpp controller.h
-	g++ -Wall -std=c++11 -O2 unit_test.cpp operation.cpp tensor.cpp -lm
+all: main.cpp operation.cpp operation.h tensor.cpp tensor.h controller.cpp controller.h
+	g++ -Wall -std=c++11 -O2 main.cpp controller.cpp operation.cpp tensor.cpp -lm
